<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_saved" />

    <item
        android:id="@+id/navigation_mybooking"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_mybooking" />

    <item
        android:id="@+id/navigation_myinbox"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_myinbox" />

    <item
        android:id="@+id/navigation_myaccount"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_myaccount" />

</menu>